--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/splash-screen": "^5.20.0",
     "@ionic-native/status-bar": "^5.20.0",
     "@ionic/angular": "^4.11.10",
+    "animate.css": "^3.7.2",
     "cordova-android": "^8.1.0",
     "cordova-plugin-advanced-http": "^2.4.0",
     "cordova-plugin-device": "^2.0.3",
