--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cordova-plugin-whitelist": "^1.3.4",
     "core-js": "^2.6.11",
     "hammerjs": "^2.0.8",
+    "ng-image-slider": "^2.4.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
