--- a/package.json
+++ b/package.json
@@ -13,63 +13,63 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.2",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/core": "~8.1.2",
-    "@angular/forms": "~8.1.2",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.1.2",
-    "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
-    "@ionic-native/core": "^5.20.0",
-    "@ionic-native/http": "^5.20.0",
-    "@ionic-native/splash-screen": "^5.20.0",
-    "@ionic-native/status-bar": "^5.20.0",
-    "@ionic/angular": "^4.11.10",
-    "@types/googlemaps": "^3.39.3",
-    "cordova-android": "^8.1.0",
-    "cordova-plugin-advanced-http": "^2.4.0",
+    "@angular/animations": "~10.0.14",
+    "@angular/cdk": "^10.1.3",
+    "@angular/common": "~10.0.14",
+    "@angular/compiler": "~10.0.14",
+    "@angular/core": "~10.0.14",
+    "@angular/forms": "~10.0.14",
+    "@angular/material": "^10.1.3",
+    "@angular/platform-browser": "~10.0.14",
+    "@angular/platform-browser-dynamic": "~10.0.14",
+    "@angular/router": "~10.0.14",
+    "@ionic-native/core": "^5.28.0",
+    "@ionic-native/http": "^5.28.0",
+    "@ionic-native/splash-screen": "^5.28.0",
+    "@ionic-native/status-bar": "^5.28.0",
+    "@ionic/angular": "^5.3.2",
+    "@types/googlemaps": "^3.39.13",
+    "cordova-android": "^9.0.0",
+    "cordova-plugin-advanced-http": "^3.0.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.3",
-    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-ionic-webview": "^5.0.0",
+    "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
-    "core-js": "^2.6.11",
+    "core-js": "^3.6.5",
     "hammerjs": "^2.0.8",
-    "ng-image-slider": "^2.4.0",
-    "rxjs": "^6.5.4",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "ng-image-slider": "^2.6.4",
+    "rxjs": "^6.6.2",
+    "tslib": "^2.0.1",
+    "zone.js": "~0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "^0.803.23",
-    "@angular-devkit/core": "~8.1.2",
-    "@angular-devkit/schematics": "~8.1.2",
-    "@angular/cli": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/compiler-cli": "~8.1.2",
-    "@angular/language-service": "~8.1.2",
-    "@ionic/angular-toolkit": "~2.0.0",
-    "@types/jasmine": "~3.3.8",
+    "@angular-devkit/architect": "~0.1000.8",
+    "@angular-devkit/build-angular": "^0.1000.8",
+    "@angular-devkit/core": "~10.0.8",
+    "@angular-devkit/schematics": "~10.0.8",
+    "@angular/cli": "~10.0.8",
+    "@angular/compiler": "~10.0.14",
+    "@angular/compiler-cli": "~10.0.14",
+    "@angular/language-service": "~10.0.14",
+    "@ionic/angular-toolkit": "~2.3.3",
+    "@types/jasmine": "~3.5.14",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.1",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.1",
-    "protractor": "^5.4.3",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "@types/node": "~14.6.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.1.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^7.0.0",
+    "ts-node": "~9.0.0",
+    "tslint": "~6.1.3",
+    "typescript": "3.9.7"
   },
   "description": "An Ionic project",
   "cordova": {
