--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
     "@ionic-native/core": "^5.28.0",
+    "@ionic-native/globalization": "^5.31.1",
     "@ionic-native/http": "^5.28.0",
     "@ionic-native/splash-screen": "^5.28.0",
     "@ionic-native/status-bar": "^5.28.0",
     "@ionic/angular": "^5.3.2",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@types/googlemaps": "^3.39.13",
     "cordova-android": "^9.0.0",
     "cordova-plugin-advanced-http": "^3.0.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-globalization": "^1.11.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^5.0.0",
     "cordova-plugin-splashscreen": "^6.0.0",
@@ -47,7 +51,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.1000.8",
-    "@angular-devkit/build-angular": "^0.1000.8",
+    "@angular-devkit/build-angular": "^0.1101.1",
     "@angular-devkit/core": "~10.0.8",
     "@angular-devkit/schematics": "~10.0.8",
     "@angular/cli": "~10.0.8",
@@ -84,7 +88,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
-      }
+      },
+      "cordova-plugin-globalization": {}
     },
     "platforms": [
       "android"
