--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
                 "output": "./svg"
               }
             ],
+            "allowedCommonJsDependencies": ["firebase/app"],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               {
@@ -174,6 +175,10 @@
               "devServerTarget": "app:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
