--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/common": "~10.0.14",
     "@angular/compiler": "~10.0.14",
     "@angular/core": "~10.0.14",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~10.0.14",
     "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.14",
@@ -48,7 +49,8 @@
     "ng-image-slider": "^2.6.4",
     "rxjs": "^6.6.2",
     "tslib": "^2.0.1",
-    "zone.js": "~0.11.1"
+    "zone.js": "~0.11.1",
+    "firebase": "^7.0 || ^8.0"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.1000.8",
@@ -74,7 +76,13 @@
     "protractor": "^7.0.0",
     "ts-node": "~9.0.0",
     "tslint": "~6.1.3",
-    "typescript": "3.9.7"
+    "typescript": "3.9.7",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3",
+    "jsonc-parser": "^3.0.0"
   },
   "description": "An Ionic project",
   "cordova": {
