--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:local": "ng serve",
     "start": "ng serve --host=0.0.0.0 --port 4200",
     "build": "ng build",
+    "build.prod" : "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
